fix of config webpack bundler

--- a/src/public/pages/index.html
+++ b/src/public/pages/index.html
@@ -5,5 +5,12 @@
 {% endblock %}
 
 {% block content %}
-
+<div class="container">
+    <div class="row align-items-center justify-content-center min-vh-100">
+        <div class="col-6">
+            <h2>GULP TEMPLATE HERE!</h2>
+            <p><a href="https://github.com/alaunal/gulp-templates">Docs here!</a></p>
+        </div>
+    </div>
+</div>
 {% endblock %}
