--- a/src/public/pages/index.html
+++ b/src/public/pages/index.html
@@ -7,9 +7,15 @@
 {% block content %}
 <div class="container">
     <div class="row align-items-center justify-content-center min-vh-100">
-        <div class="col-6">
-            <h2>GULP TEMPLATE HERE!</h2>
-            <p><a href="https://github.com/alaunal/gulp-templates">Docs here!</a></p>
+        <div class="col-6" style="text-align: center;">
+            <img src="{{ base.static }}images/3d-modeling.svg" alt="logo" height="100" class="mb-1" />
+            <h1>GULP TEMPLATE</h1>
+            <p class="mb-4">is a tool that we designed to make it easier for developers (especially Front-end Developers) to create and create user interfaces as outlined in the visual web form of the design that has been determined.</p>
+            <p>
+                <strong><a href="https://github.com/alaunal/gulp-templates" class="mr-3">Github</a></strong>
+                <strong><a href="/sign-in.html" class="mr-3" target="_blank">Example Template</a></strong>
+                <strong><a href="https://github.com/alaunal/">About</a></strong>
+            </p>
         </div>
     </div>
 </div>
